kubernetes/apps/o11y/kube-prometheus-stack/app/securitypolicy-prometheus.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
  oidc:
    provider:
      issuer: "https://id.${SECRET_DOMAIN}"
    clientID: "47a300d5-0237-4b31-8eb4-44a4d0288d69"
    clientSecret:
      name: prometheus-oidc-secret
    redirectURL: "https://prometheus.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNames:
      idToken: prometheus-id-token
      accessToken: prometheus-access-token
    forwardAccessToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
